// Vitest Snapshot v1

exports[`unused-modules - esbuild > should create valid stylesheet 1`] = `
"body {
  background-color: #e6e6fa;
}
._1j78ztq0 {
  box-sizing: border-box;
}
"
`;

exports[`unused-modules - mini-css-extract > should create valid stylesheet 1`] = `
"body {
  background-color: #e6e6fa;
}
._13dn9qt0 {
  box-sizing: border-box;
}
body {
  border: 5px solid #000;
}
._1mtonhh0 {
  display: flex;
}
.plqi3i0 {
  background: green;
  height: 100px;
  width: 100px;
}
"
`;

exports[`unused-modules - vite > should create valid stylesheet 1`] = `
"body {
  background-color: #e6e6fa;
  border: 5px solid #000;
}
.fbihc60 {
  display: flex;
}
.g6ndup0 {
  background-color: #00f;
  color: red;
}
._36o3zb0 {
  background: green;
  height: 100px;
  width: 100px;
}
._1j78ztq0 {
  box-sizing: border-box;
}
"
`;
